# policyengine-uk

./: .buildinfo  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CNAME  CONTRIBUTING.md  DIAGNOSIS_AND_FIX.md  EASY_ISSUES.md  Individuals.html  MANIFEST.in  Makefile  PSL_catalog.json  Procfile  README.md  Reforms.html  analysis.py  app.py  calibrate.py  changelog.yaml  changelog_entry.yaml  child_benefit.html  config.json  emp_ni_test.ipynb  employer_ni.ipynb  employer_ni_example.ipynb  find_missing_enums.py  genindex.html  getting-started.json  growthfactors.json  hbai.json  index.html  index.json  individuals.html  initial_test.py  model-baseline.json  monthly_inflation.yaml  myst.search.json  myst.xref.json  myst.yml  (+24 more)
.beads/: deletions.jsonl  issues.jsonl
.circleci/: config.yml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  bump_version.py  changelog_template.md  compare_psnd.py  copilot-instructions.md  has-functional-changes.sh  publish-git-tag.sh  update_api.py
.github/workflows/: check_jupyterbook.yml  code_changes.yaml  deploy.yml  deploy_jupyterbook.yml  docs_changes.yaml  lint.yml  main.yml  merged.yml  pr.yml  pr_code_changes.yaml  pr_docs_changes.yaml  push.yml  test.yml  test_pypi_yank.yml  versioning.yaml
_sources/: index.ipynb  individuals.ipynb  reforms.ipynb  validation.ipynb
_sources/assumptions/: growthfactors.ipynb  growthfactors.md  water-bills.md
_sources/model/: baseline.ipynb  carbon_tax.md  child_benefit.ipynb  pension_credit.ipynb  stamp_duty.ipynb  tax_credits.ipynb
_sources/usage/: getting-started.ipynb  reforms.ipynb  weighting.ipynb
_sources/validation/: spi-validation.ipynb  validation.ipynb
analysis/: effective_takeup_rates.py
assumptions/: growthfactors.html  water-bills.html
changelog.d/: 1005.md  1008-regional-childcare-plan.md  1008.md  1015.md  1031.md  1032.md  1042.md  1043.md  1044-explicit-leave.md  1044.md  1046.md  1047.md  1048.md  1055.md  1056.md  1065.md  1069.md  1114.md  1171.md  1209.md  1320.md  1354.md  1379.md  1398.md  1400.md  1437-revert.md  1437.md  1458-pawhp-refs.md  16-to-19-bursary-fund.added.md  1616.md  1621.md  1628.md  1632.md  1644-childcare-registry.md  1654-revert.md  1654.md  1666.md  1670.md  1671.md  1676.changed.md  (+128 more)
data/weights/: README.md  adjusted_weights.csv
datasets/frs/: import_frs_data.py
docs/: VARIABLE_STATS.md  council_tax_ctr_pipeline.md  generate_descriptions.py
docs/book/: Individuals.ipynb  Reforms.ipynb  Weighting.ipynb  _config.yml  _toc.yml  add_plotly_to_book.py  child_benefit.ipynb  environment.yml  index.ipynb  index.md  individuals.ipynb  myst.yml  validation.ipynb  weighting.ipynb
docs/streamlit/: Dockerfile  Home.py  requirements.txt
docs/summary/: INSTALLATION.md  VARIABLES.md  VARIABLE_STATS.md  generate_descriptions.py  generate_summary.py  summary.yaml
examples/: income-sources.html
getting-started/: index.html
growthfactors/: index.html
hbai/: index.html
model/: baseline.html  carbon_tax.html  child_benefit.html  data.html  spi-validation.html  stamp_duty.html  tax_credits.html  validation.html
model-baseline/: index.html
openfisca_uk/: __init__.py  api.py  entities.py  initial_setup.py  model_api.py  repo.py  requirements.txt  system.py
openfisca_uk/analytics/: ukmod_benchmarking.py  variable_metadata.yml
openfisca_uk/calibration/: calibrate.py  calibration.py  frs_weights.h5  losses.yaml  reweighting.py
openfisca_uk/config/: postcode_lookup.py
openfisca_uk/data/: __init__.py  cli.py
openfisca_uk/graphs/: __init__.py  data.py  distributional.py  general.py  hypothetical.py  population.py
openfisca_uk/microdata/: __init__.py  cli.py  frs.py  generate.py  simulation.py  utils.py
openfisca_uk/parameters/: __init__.py  _calibration.yaml  calibration.yaml  statistics.yaml
openfisca_uk/reforms/: __init__.py  basic_income.py  benefit_takeup.py  marginal_tax_rates.py  modelling.py  ubi.py
openfisca_uk/situation_examples/: __init__.py  examples.py
openfisca_uk/tools/: aggregates.py  baseline_variables.py  benefit_uprating.py  cli.py  datasets.yml  general.py  internals.py  ons_monthly_inflation_to_parameter.py  optimisation.py  parameters.py  reforms.py  simulation.py  synthetic.py  takeup.py  tax_benefit_uprating.py  testing.py  testing_setup.py  variables.py
openfisca_uk/variables/: benefits.py  demographics.py  family.py  household.py  housing.py  income.py  person.py  stats.py  taxes.py
policy/: uc-rebalancing.html
policyengine_uk/: __init__.py  api.py  build_metadata.py  entities.py  firm_simulation.py  firm_tax_benefit_system.py  initial_setup.py  microsimulation.py  model_api.py  modelled_policies.yaml  parameter_tree.py  programs.yaml  simulation.py  system.py  tax_benefit_system.py
policyengine_uk/config/: postcode_lookup.py
policyengine_uk/data/: __init__.py  cli.py  dataset_schema.py  dataset_sources.py  economic_assumptions.py  filter_dataset.py  firm_dataset_schema.py  uprating_growth_factors.csv  uprating_indices.yaml
policyengine_uk/dynamics/: labour_supply.py  participation.py  progression.py
policyengine_uk/firm_analysis/: bunching_analysis.py  plot_example.py  static_revenue.py
policyengine_uk/graphs/: __init__.py  data.py  general.py  hypothetical.py  population.py
policyengine_uk/parameters/: README.md
policyengine_uk/reforms/: __init__.py  benefit_inflation_uprating.py  reforms.py
policyengine_uk/scenarios/: __init__.py  abolish_benefit_cap.py  no_economic_assumptions.py  pip_reform.py  reindex_benefit_cap.py  repeal_two_child_limit.py  uc_reform.py
policyengine_uk/situation_examples/: __init__.py
scenarios/: index.html
scripts/: entitledto_ctr_compare.py  import_obr_forecasts.py  policyengine_ctr_compare.py  test_student_loan_uprating.py  turn2us_ctr_compare.py
simulations/: index.html
tests/: speedtest.py
uc-rebalancing/: index.html
usage/: getting-started.html  income-sources.html  individuals.html  reforms.html  scenarios.html  simulations.html  weighting.html
validation/: hbai.html  spi-validation.html  validation.html
water-bills/: index.html
(+5975 files in other folders)
