[project]
name = "policyengine-uk"
version = "2.38.0"
description = "PolicyEngine tax and benefit system for the UK"
readme = "README.md"
authors = [
    { name = "PolicyEngine", email = "nikhil@policyengine.org" }
]
maintainers = [
    { name = "Nikhil Woodruff", email = "nikhil.woodruff@outlook.com" }
]
license = { text = "AGPL-3.0" }
keywords = ["benefit", "microsimulation", "social", "tax"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.10"
dependencies = [
    "policyengine-core>=3.6.4",
    "microdf-python",
]

[project.urls]
Homepage = "https://github.com/PolicyEngine/policyengine-uk"
Repository = "https://github.com/PolicyEngine/policyengine-uk"

[project.scripts]
# Add console scripts here if needed

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "policyengine_uk/**/*",
    "CHANGELOG.md",
    "LICENSE",
    "README.md",
]

[tool.hatch.build.targets.wheel]
packages = ["policyengine_uk"]

[tool.hatch.build.targets.wheel.shared-data]
"CHANGELOG.md" = "share/openfisca/openfisca-country-template/CHANGELOG.md"
"LICENSE" = "share/openfisca/openfisca-country-template/LICENSE"
"README.md" = "share/openfisca/openfisca-country-template/README.md"

[dependency-groups]
dev = [
    "tables>=3.10.1",
]

[project.optional-dependencies]
dev = [
    "black",
    "coverage",
    "furo<2023",
    "tqdm",
    "pytest",
    "setuptools",
    "sphinx-argparse>=0.3.2,<1",
    "sphinx-math-dollar>=1.2.1,<2",
    "wheel",
    "yaml-changelog>=0.1.7",
    "snowballstemmer>=2,<3",
    "jupyter-book",
    "linecheck",
]
