[project] 
name = "policyengine-uk"
version = "2.49.0"
description = "PolicyEngine tax and benefit system for the UK."
readme = "README.md"
authors = [
    { name = "PolicyEngine", email = "nikhil@policyengine.org" }
]
maintainers = [
    { name = "Nikhil Woodruff", email = "nikhil@policyengine.org" }
]
license = "AGPL-3.0"
keywords = ["benefit", "microsimulation", "social", "tax"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.13"
dependencies = [
    "policyengine-core>=3.19.3",
    "microdf-python>=1.0.2",
    "pydantic>=2.11.7",
    "tables>=3.10.2",
]

[project.urls]
Homepage = "https://github.com/PolicyEngine/policyengine-uk"
Repository = "https://github.com/PolicyEngine/policyengine-uk"
Issues = "https://github.com/PolicyEngine/policyengine-uk/issues"
Changelog = "https://github.com/PolicyEngine/policyengine-uk/blob/master/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "policyengine_uk/**/*",
    "CHANGELOG.md",
    "LICENSE",
    "README.md",
]

[tool.hatch.build.targets.wheel]
packages = ["policyengine_uk"]

[project.optional-dependencies]
dev = [
    "black",
    "coverage",
    "furo<2023",
    "tqdm",
    "pytest",
    "pytest-cov",
    "setuptools",
    "sphinx-argparse>=0.3.2,<1",
    "sphinx-math-dollar>=1.2.1,<2",
    "wheel",
    "yaml-changelog>=0.1.7",
    "snowballstemmer>=2,<3",
    "jupyter-book>=2.0.0a0",
    "linecheck",
    "rich",
]
